--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
     <title>The Center for Economic Theory | Northwestern University</title>
-    <meta name="google-site-verification" content="EprAcqhpz8THMe8vFUrzphox15tljBVg7JX4BOR6qlU" />
+    <noscript>
+      <meta http-equiv="refresh" content="0; url=https://sites.northwestern.edu/cet/" />
+    </noscript>
   </head>
   <script>
     window.location.replace("https://sites.northwestern.edu/cet/");
