optimize the files

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<html>
-  <head>
-    <title>The Center for Economic Theory | Northwestern University</title>
-    <noscript>
-      <meta http-equiv="refresh" content="0; url=https://sites.northwestern.edu/cet/" />
-    </noscript>
-  </head>
-  <script>
-    window.location.replace("https://sites.northwestern.edu/cet/");
-  </script>
-</html>
+<!DOCTYPE html>
+<script>window.location.replace("https://sites.northwestern.edu/cet/");</script>
+<title>The Center for Economic Theory | Northwestern University</title>
+<noscript>
+  <meta http-equiv="refresh" content="0; url=https://sites.northwestern.edu/cet/">
+</noscript>
+<p>
+  If redirection does not occur automatically,
+  <a href="https://sites.northwestern.edu/cet/">click here to go to the CET homepage</a>.
+</p>
