--- a/404.html
+++ b/404.html
@@ -1,8 +1,7 @@
-<html>
-  <head>
-    <title>The Center for Economic Theory | Northwestern University</title>
-  </head>
-  <script>
-    window.location.replace("https://sites.northwestern.edu/cet" + window.location.pathname);
-  </script>
-</html>
+<!DOCTYPE html>
+<script>window.location.replace("https://sites.northwestern.edu/cet" + window.location.pathname);</script>
+<title>The Center for Economic Theory | Northwestern University</title>
+<p>
+  If redirection does not occur automatically,
+  <a href="https://sites.northwestern.edu/cet/">click here to go to the CET homepage</a>.
+</p>
